--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -83,7 +83,7 @@ jobs:
       fail-fast: false
       matrix:
         distro: [stable, unstable]
-        arch: [arm64, mips64el]
+        arch: [arm64, armhf, mips64el]
     needs: check_commit_msg
     if: ${{ !contains( needs.check_commit_msg.outputs.commit_message, '!DEB') }}
     name: Build debian package for ${{ matrix.distro }} ${{ matrix.arch }}
