--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10.1)
 project(Qv2ray VERSION 3.0.0)
-set(QV2RAY_PROJECT_VERSION_SUFFIX "beta1")
+set(QV2RAY_PROJECT_VERSION_SUFFIX "rc1")
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
