+ fixed macOS plugin installation prefix :)

--- a/src/plugins/routingA/CMakeLists.txt
+++ b/src/plugins/routingA/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 qv2ray_add_plugin(QvPlugin-RoutingAEditor Widgets
-    INSTALL_PREFIX_MACOS "$<TARGET_BUNDLE_DIR:qv2ray>/Contents/Resources/plugins"
+    INSTALL_PREFIX_MACOS "${CMAKE_INSTALL_PREFIX}/qv2ray.app/Contents/Resources/plugins"
     CLASS_NAME "RoutingAPlugin"
     DEV_INTERFACE)
 
