--- a/src/plugins/protocols/CMakeLists.txt
+++ b/src/plugins/protocols/CMakeLists.txt
@@ -25,7 +25,7 @@ ADD_SOURCE(inbound socksin)
 #ADD_SOURCE(inbound vmess)
 
 qv2ray_add_plugin(${PROTOCOL_PLUGIN_TARGET} Widgets
-    INSTALL_PREFIX_MACOS "$<TARGET_BUNDLE_DIR:qv2ray>/Contents/Resources/plugins"
+    INSTALL_PREFIX_MACOS "${CMAKE_INSTALL_PREFIX}/qv2ray.app/Contents/Resources/plugins"
     CLASS_NAME "InternalProtocolSupportPlugin")
 
 target_sources(${PROTOCOL_PLUGIN_TARGET} PRIVATE
