--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,6 +52,8 @@ jobs:
           }
 
     steps:
+    - name: Setup Python
+      uses: actions/setup-python@v2.3.1
     - uses: actions/checkout@v2
       with:
         submodules: 'recursive'
