--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,8 +52,6 @@ jobs:
           }
 
     steps:
-    - name: Setup Python
-      uses: actions/setup-python@v2.3.1
     - uses: actions/checkout@v2
       with:
         submodules: 'recursive'
@@ -64,15 +62,13 @@ jobs:
     - name: Install MSVC compiler
       if: matrix.config.has_msvc
       uses: ilammy/msvc-dev-cmd@v1
-      
-    - name: test
-      run: |
-        pip install aqtinstall
 
     - name: Install Qt
       uses: jurplel/install-qt-action@v2.14.0
       with:
         version: 6.2.1
+        py7zrversion: '==latest'
+        aqtversion: '==latest'
 
     - name: run-vcpkg
       uses: lukka/run-vcpkg@v7.3
